--- a/Web/Django/hackathon_Web/Templates/html/Test.html
+++ b/Web/Django/hackathon_Web/Templates/html/Test.html
@@ -21,10 +21,18 @@
     });
 </script> -->
 
+
+
+<link href="/Templates/css/bootstrap.css" rel="stylesheet">
+
 {% endblock %} 
 
 {% block main %}
 
 <div id="ask"><h2></h2></div>
+
+<div class="Main_1 container text-center ">
+    {{ Main_1 |safe}}
+</div>
 
 {% endblock %}
