--- a/Web/Django/hackathon_Web/Templates/html/base.htm
+++ b/Web/Django/hackathon_Web/Templates/html/base.htm
@@ -37,6 +37,11 @@
                         </li>
                     </ul>
                 </div>
+                <ul class="Top_Bar_Right">
+                        <li>
+                            <a href="#x" id="Login">登入</a>
+                        </li>
+                    </ul>
             </tr>
         </div>
         <!-- -------------------------------------------------------- -->
